<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Jan Heinrich Reimer
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">material-intro</string>

    <string name="title_menu_github">View on GitHub</string>
    <string name="title_menu_reset_first_start">Reset "First start" flag</string>

    <string name="label_options">Options:</string>
    <string name="label_option_fullscreen">Enable fullscreen</string>
    <string name="label_option_scrollable">Scrollable slides</string>
    <string name="label_option_custom_fragments">Enable custom fragments</string>
    <string name="label_option_permissions">Enable permission request</string>
    <string name="label_option_show_back">Show back button</string>
    <string name="label_option_show_next">Show next button</string>
    <string name="label_option_skip_enabled">Enable skip button</string>
    <string name="label_option_finish_enabled">Enable finish button</string>
    <string name="label_option_get_started_enabled">Enable \"Get Started\" button</string>
    <string name="label_start_intro">Start intro</string>
    <string name="label_or">or</string>
    <string name="label_demos">Demos: </string>
    <string name="label_start_canteen">\"Canteen\" intro</string>
    <string name="label_start_splash">Splash screen</string>

    <string name="title_material_metaphor">Material is the metaphor</string>
    <string name="title_material_bold">Bold, graphic, intentional</string>
    <string name="title_material_motion">Motion provides meaning</string>
    <string name="title_material_shadow">Light and shadow</string>

    <string name="description_material_metaphor">A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.</string>
    <string name="description_material_bold">The foundational elements of print-based design – typography, grids, space, scale, color, and use of imagery – guide visual treatments.</string>
    <string name="description_material_motion">Motion respects and reinforces the user as the prime mover. Primary user actions are inflection points that initiate motion, transforming the whole design.</string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.</string>

    <string name="title_permissions">Requesting permissions was never easier.</string>
    <string name="description_permissions">This app needs the camera and storage permission.\nIt\'s only to show how permission requests work in this library and we won\'t do anything with the granted permissions.</string>
    <string name="label_grant_permissions">Please grant the permissions before proceeding.</string>

    <string name="label_button_cta">Click me!</string>
    <string name="toast_button_cta">Hey, that\'s how custom CTA buttons work in material-intro!</string>

    <string name="title_fragment_login">This is a custom fragment.</string>
    <string name="hint_fake_username">Fake username</string>
    <string name="hint_fake_password">Fake password</string>
    <string name="label_fake_login">Fake login</string>
    <string name="label_fake_login_loading">Loading…</string>
    <string name="label_fake_login_success">Logged in ☺</string>
    <string name="label_fake_login_success_message">Successfully faked login.</string>
    <string name="label_fill_out_form">Please fill out the form before proceeding.</string>

    <string name="title_fragment_custom">Take off!</string>

    <string name="label_activity_finish">Nothing here…\n…just a demo how to create a splash screen intro.</string>

    <string name="title_canteen_intro1" translatable="false">Menus right on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Cash on delivery</string>
    <string name="title_canteen_intro3" translatable="false">Choose what you like</string>
    <string name="description_canteen_intro1" translatable="false">Looking for something to eat? Just browse the feed wherever you are.</string>
    <string name="description_canteen_intro2" translatable="false">Order and we\'ll deliver the menu right in front of your door.</string>
    <string name="description_canteen_intro3" translatable="false">Bookmark a menu you wanted to save and keep track of its status whether it\'s available or not.</string>
    <string name="label_button_cta_canteen_intro" translatable="false">Get started</string>
</resources>
