<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.heinrichreimersoftware.materialintro.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:elevation="4dp"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <View
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/baseline"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:text="@string/label_options"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <CheckBox
                android:id="@+id/option_fullscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="false"
                android:text="@string/label_option_fullscreen"/>

            <CheckBox
                android:id="@+id/option_scrollable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="false"
                android:text="@string/label_option_scrollable"/>

            <CheckBox
                android:id="@+id/option_custom_fragments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="true"
                android:text="@string/label_option_custom_fragments"/>

            <CheckBox
                android:id="@+id/option_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="true"
                android:text="@string/label_option_permissions"/>

            <CheckBox
                android:id="@+id/option_permissions_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="true"
                android:text="@string/label_option_permissions_required"/>

            <CheckBox
                android:id="@+id/option_skip_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="true"
                android:text="@string/label_option_skip_enabled"/>

            <CheckBox
                android:id="@+id/option_finish_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="true"
                android:text="@string/label_option_finish_enabled"/>

            <CheckBox
                android:id="@+id/option_start_new_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:checked="false"
                android:text="@string/label_option_open_new_activity"/>

            <Button
                android:id="@+id/start_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/baseline"
                android:text="@string/label_start_intro"
                android:theme="@style/AppThemeDark"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
